HEAD only (unreleased)

  New Features

    - CMFSetup: Split off GenericSetup.
      GenericSetup allows to use CMFSetup functionality outside CMF. See the
      README.txt of GenericSetup for details.

    - Interfaces: Converted all interfaces to zope 3 style interfaces.
      Most interfaces are bridged back to zope 2 style interfaces to provide
      backwards compatibility.

    - The features of CMFonFive have been folder into CMFCore and
      CMFDefault:

      * Zope 3 menus (browser:menu) are bridged to CMF actions using the
        portal_fiveactions tool. Any menuItem registered will be
        accessible though the portal_actions tool, where the menu for
        which the item was registered will be used as the action
        category.

      * The Zope 3 'cmf' skin layer provides integration between the
        Zope3 standard macros and the CMF main template, by redefining
        five_template.pt.

    - TypeInformation and newstyle Actions: Added i18n support.
      If 'i18n_domain' is specified, 'title' and 'description' are returned as
      MassageID objects instead of strings. This allows to use different i18n
      domains for different TypeInfos and Actions.

    - Replaced user messages by MassageIDs to improve the i18n support.

    - CMFDefault CMFSetup profile: Added CMF BTree Folder to the list of
      automatically instantiated types in the types tool.
      (http://www.zope.org/Collectors/CMF/371)

    - CMFDefault skins: Added members_delete_form.
      This adds a confirmation step to avoid accidental deletion of members.

    - DirectoryView and derived classes can now have metadata associated with
      them just like regular FSObject-derived objects can.

    - DirectoryView and derived classes: It is now possible to customize what 
      gets created to represent directories inside the directory view.
      Previously, the code had a fixed assumption that all directories on the 
      file system must turn into instances of 